--- a/sign-in/index.html
+++ b/sign-in/index.html
@@ -12,7 +12,7 @@
 
     
 
-    <link rel="icon" href="../../trade.ico" type="image/x-icon">
+    <link rel="icon" href="../trade.ico" type="image/x-icon">
 
 <link href="../assets/dist/css/bootstrap.min.css" rel="stylesheet">
 
