--- a/sign-in/broker.html
+++ b/sign-in/broker.html
@@ -6,7 +6,7 @@
   <title>Crypto Tracker</title>
   <link rel="stylesheet" href="styles.css">
   <link href="../assets/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="icon" href="../../trade.ico" type="image/x-icon">
+  <link rel="icon" href="../images/trade.ico" type="image/x-icon">
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
