--- a/sign-in/convert.html
+++ b/sign-in/convert.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Conversion History</title>
-	<link rel="icon" href="../../trade.ico" type="image/x-icon">
+	<link rel="icon" href="../images/trade.ico" type="image/x-icon">
   <link rel="canonical" href="https://getbootstrap.com/docs/5.2/examples/carousel/">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
