--- a/sign-in/deposit.html
+++ b/sign-in/deposit.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Deposit Platform</title>
-  <link rel="icon" href="../../trade.ico" type="image/x-icon">
+  <link rel="icon" href="../images/trade.ico" type="image/x-icon">
   <link rel="stylesheet" href="deposit.css">
   <link rel="canonical" href="https://getbootstrap.com/docs/5.2/examples/carousel/">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
