--- a/sign-in/log.html
+++ b/sign-in/log.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="../../trade.ico" type="image/x-icon">
+    <link rel="icon" href="../images/trade.ico" type="image/x-icon">
     <title>Signin Template</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
