--- a/sign-in/signup.html
+++ b/sign-in/signup.html
@@ -38,9 +38,13 @@
 	<div class="row g-5">
     <div class="col-md-5 col-lg-4 order-md-last">
       <form class="card p-2" style="width: 14.5rem;">
-	<div class="input-group d-flex flex-column align-items-center">
-    <input type="text" class="form-control w-100 mb-2 text-center" aria-label="Disabled input example" disabled readonly>
-    <button type="button" class="btn btn-danger w-100" id="liveToastBtn">SUBSCRIBE!</button>
+	<div class="align-items-center shadow-sm" 
+     style="max-width: 150px; background: rgba(255, 255, 255, 0.7); backdrop-filter: blur(10px);">
+    
+    <button type="button" class="btn w-100 rounded-3 fw-bold text-white" id="liveToastBtn" 
+            style="background: linear-gradient(135deg, #ff7eb3, #ff758c); border: none; transition: 0.3s ease;">
+        SUBSCRIBE  
+    </button>
 </div>
 
       </form>
