--- a/sign-in/signup.html
+++ b/sign-in/signup.html
@@ -42,7 +42,7 @@
      style="max-width: 150px; background: rgba(255, 255, 255, 0.7); backdrop-filter: blur(10px);">
     
     <button type="button" class="btn w-100 rounded-3 fw-bold text-white" id="liveToastBtn" 
-            style="background: linear-gradient(135deg, #ff7eb3, #ff758c); border: none; transition: 0.3s ease;">
+            style="background: linear-gradient(135deg, #e05682, #d13b64); border: none; transition: 0.3s ease;">
         SUBSCRIBE  
     </button>
 </div>
@@ -177,7 +177,7 @@ Welcome to Trading Hub</button>
           </div>
           <div class="text-center">
   <hr class="my-4">
-  <button id="signupButton" class="w-50 btn btn-danger" type="submit" disabled>Sign up</button>
+  <button id="signupButton" class="w-50 btn btn-danger rounded-3 fw-bold" type="submit" disabled>Sign up</button>
 </div>
 
         </form>
