--- a/sign-in/withdraw.html
+++ b/sign-in/withdraw.html
@@ -61,13 +61,12 @@
     .form-section select:focus {
       border-color: #007bff;
     }
-	.fixed-image {
+		   .fixed-image {
       position: fixed;
-      top: 520px; 
-      right: 50px; 
+      top: 90%; 
+      right: 40px; 
       z-index: 1000;
     }
-
     .form-section.hidden {
       display: none;
     }
