--- a/sign-in/index.html
+++ b/sign-in/index.html
@@ -115,19 +115,16 @@ background-size: cover; /* Ensures the image covers the entire background */
   }
 
   /* Cute and appropriate button styling */
-  .btn-outline-danger {
+  .btn-danger {
     border-color: #f76c6c;
-    color: #f76c6c;
+    color: white;
     padding: 0.6em 1.2em;
     border-radius: 25px;
     font-weight: bold;
     transition: background-color 0.3s, color 0.3s;
   }
 
-  .btn-outline-danger:hover {
-    background-color: #f76c6c;
-    color: white;
-  }
+ 
 
 
       .nav-scroller .nav {
@@ -172,7 +169,7 @@ background-size: cover; /* Ensures the image covers the entire background */
 	<img src="../images/candle.png" style="max-width: 20%; height:auto;">
       <h1 class="glisten-text display-4 text-white fw-normal">Trading Hub</h1>
       <p class="lead text-white fw-small">Invest now and see your profit <mark>multiply in an instant!</mark> Be one of the 1,000,000 people to sign up.</p>
-      <a class="btn btn-outline-danger" href="signup.html">Sign Up</a>
+      <a class="btn btn-danger" href="signup.html">Sign Up</a>
     </div>
    </div>
   </div>
