--- a/sign-in/earn.html
+++ b/sign-in/earn.html
@@ -329,15 +329,18 @@ height: 350px}
 
 
 
-  
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="carousel-control-prev-icon" aria-hidden="true" 
+          style="filter: brightness(0) saturate(100%) invert(100%);"></span>
     <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+</button>
+
+<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true" 
+          style="filter: brightness(0) saturate(100%) invert(100%);"></span>
     <span class="visually-hidden">Next</span>
-  </button>
+</button>
+
 </div>
 </div>
 
