--- a/sign-in/copy2.html
+++ b/sign-in/copy2.html
@@ -155,10 +155,14 @@
   </head>
   <body class="d-flex h-100 text-center text-bg-dark">
     <div class="position-absolute top-0 start-0 p-3">
-        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-            <path d="M19 12H5M5 12l7-7M5 12l7 7"/>
-        </svg>
-    </div>
+  <a href="earn.html" style="text-decoration: none; color: inherit;">
+    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" 
+         stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+      <path d="M19 12H5M5 12l7-7M5 12l7 7"/> 
+    </svg>
+  </a>
+</div>
+
 <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
   <header class="mb-auto">
     <div>
