--- a/sign-in/earn.html
+++ b/sign-in/earn.html
@@ -378,9 +378,9 @@ height: 350px}
 
       <section class="hero">
       <h1 class="text-dark">Welcome to Trading Hub</h1>
-      <p class="lead text-dark">Join our platform and start trading with ease. Invite friends and earn rewards!</p><br>
+      <p class="lead text-dark">Join our platform and start trading with ease. Invite friends and earn rewards!</p>
 	  <div style="display: flex; justify-content: center; align-items: center; min-height: 100vh; background-color: #f8f9fa;">
-  <div class="card border-danger mb-3" style="width: 25rem; height: 25rem;">
+  <div class="card border-danger mb-3" style="width: 25rem; height: 23rem;">
     <div class="card-body">
       <section class="referral" style="text-align: center;">
         <h2>$0.00</h2>
