--- a/sign-in/earn.html
+++ b/sign-in/earn.html
@@ -942,53 +942,13 @@ height: 350px}
     // Or you could use toast.remove(); to completely remove the toast from the DOM
   }
 </script>
-<script>
-  document.addEventListener("DOMContentLoaded", function () {
-    const lazyImages = document.querySelectorAll('img.lazy-img');
-    const lazySources = document.querySelectorAll('source[data-srcset]');
-
-    if ("IntersectionObserver" in window) {
-      const observer = new IntersectionObserver(function (entries, observer) {
-        entries.forEach(entry => {
-          if (entry.isIntersecting) {
-            const img = entry.target;
-
-            // For <img>
-            if (img.tagName === "IMG" && img.dataset.src) {
-              img.src = img.dataset.src;
-              img.classList.remove("lazy-img");
-              observer.unobserve(img);
-            }
-
-            // For <source> inside <picture>
-            if (img.tagName === "SOURCE" && img.dataset.srcset) {
-              img.srcset = img.dataset.srcset;
-              observer.unobserve(img);
-            }
-          }
-        });
-      });
-
-      lazyImages.forEach(img => observer.observe(img));
-      lazySources.forEach(source => observer.observe(source));
-
-    } else {
-      // Fallback: just load all images
-      lazyImages.forEach(img => {
-        img.src = img.dataset.src;
-      });
-      lazySources.forEach(source => {
-        source.srcset = source.dataset.srcset;
-      });
-    }
-  });
-</script>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"> </script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
 
     <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
 <script src="earn.js"></script>
+	  <script src="lazy.js"></script>
 <script src="success.js"></script>
       
   </body>
