--- a/sign-in/earn.html
+++ b/sign-in/earn.html
@@ -32,7 +32,7 @@
       width: 90%; 
       max-width: 600px; 
     }
-	.enhanced-image {
+	.lazy-img enhanced-image {
     width: 100%;
     height: 500px;
     object-fit: cover;
@@ -48,10 +48,10 @@
     background: linear-gradient(to bottom, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.3));
   }
 @media (max-width: 768px) { 
-.enhanced-image {
+.lazy-img enhanced-image {
 height: 350px}
 }
-  .enhanced-image:hover {
+  .lazy-img enhanced-image:hover {
     transform: scale(1.02); /* Subtle zoom on hover */
     filter: contrast(1.2) brightness(1.1);
   }
