--- a/sign-in/earn.html
+++ b/sign-in/earn.html
@@ -32,7 +32,7 @@
       width: 90%; 
       max-width: 600px; 
     }
-	.lazy-img enhanced-image {
+	.enhanced-image {
     width: 100%;
     height: 500px;
     object-fit: cover;
@@ -48,10 +48,10 @@
     background: linear-gradient(to bottom, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.3));
   }
 @media (max-width: 768px) { 
-.lazy-img enhanced-image {
+.enhanced-image {
 height: 350px}
 }
-  .lazy-img enhanced-image:hover {
+  .enhanced-image:hover {
     transform: scale(1.02); /* Subtle zoom on hover */
     filter: contrast(1.2) brightness(1.1);
   }
@@ -291,7 +291,7 @@ height: 350px}
     <picture>
       <source data-srcset="../images/tr.png" media="(max-width: 768px)">
       <source data-srcset="../images/tr.png" media="(min-width: 769px)">
-      <img data-src="../images/tr.png" class="lazy-img enhanced-image d-block w-100" alt="Expand Your Horizon">
+      <img data-src="../images/tr.png" class="enhanced-image d-block w-100" alt="Expand Your Horizon">
     </picture>
     <div class="carousel-caption d-block">
       <h1>Expand Your Horizon</h1>
@@ -303,7 +303,7 @@ height: 350px}
     <picture>
       <source data-srcset="../images/stock.jpg" media="(max-width: 768px)">
       <source data-srcset="../images/stock.jpg" media="(min-width: 769px)">
-      <img data-src="../images/stock.jpg" class="lazy-img enhanced-image d-block w-100" alt="Discover new things">
+      <img data-src="../images/stock.jpg" class="enhanced-image d-block w-100" alt="Discover new things">
     </picture>
     <div class="carousel-caption d-block">
       <h1>Discover New Markets</h1>
@@ -318,7 +318,7 @@ height: 350px}
     <picture>
       <source srcset="../images/crypto.png" media="(max-width: 768px)">
       <source srcset="../images/crypto.png" media="(min-width: 769px)">
-      <img src="../images/crypto.png" class="lazy-img enhanced-image d-block w-100" alt="Trade with various currencies">
+      <img src="../images/crypto.png" class="enhanced-image d-block w-100" alt="Trade with various currencies">
     </picture>
     <div class="carousel-caption d-block">
       <h1>Trade with various currencies</h1>
@@ -948,7 +948,6 @@ height: 350px}
 
     <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
 <script src="earn.js"></script>
-	  <script src="lazy.js"></script>
 <script src="success.js"></script>
       
   </body>
