--- a/sign-in/earn.html
+++ b/sign-in/earn.html
@@ -287,10 +287,13 @@ height: 350px}
     </div>
   
 <div class="carousel-inner">
+  <!-- Slide 1 -->
   <div class="carousel-item active" data-bs-interval="3000">
     <picture>
-      <source data-srcset="../images/tr.png" media="(max-width: 768px)">
-      <source data-srcset="../images/tr.png" media="(min-width: 769px)">
+      <source data-srcset="../images/tr.webp" type="image/webp" media="(max-width: 768px)">
+      <source data-srcset="../images/tr.webp" type="image/webp" media="(min-width: 769px)">
+      <source data-srcset="../images/tr.png" type="image/png" media="(max-width: 768px)">
+      <source data-srcset="../images/tr.png" type="image/png" media="(min-width: 769px)">
       <img data-src="../images/tr.png" class="enhanced-image d-block w-100" alt="Expand Your Horizon">
     </picture>
     <div class="carousel-caption d-block">
@@ -298,11 +301,14 @@ height: 350px}
       <p>Trading Hub is a place where crypto exchange flows around the world.</p>
     </div>
   </div>
-  
+
+  <!-- Slide 2 -->
   <div class="carousel-item" data-bs-interval="3000">
     <picture>
-      <source data-srcset="../images/stock.jpg" media="(max-width: 768px)">
-      <source data-srcset="../images/stock.jpg" media="(min-width: 769px)">
+      <source data-srcset="../images/stock.webp" type="image/webp" media="(max-width: 768px)">
+      <source data-srcset="../images/stock.webp" type="image/webp" media="(min-width: 769px)">
+      <source data-srcset="../images/stock.jpg" type="image/jpeg" media="(max-width: 768px)">
+      <source data-srcset="../images/stock.jpg" type="image/jpeg" media="(min-width: 769px)">
       <img data-src="../images/stock.jpg" class="enhanced-image d-block w-100" alt="Discover new things">
     </picture>
     <div class="carousel-caption d-block">
@@ -310,8 +316,22 @@ height: 350px}
       <p>Register your account and begin your journey with us!</p>
     </div>
   </div>
-</div>
 
+  <!-- Slide 3 -->
+  <div class="carousel-item" data-bs-interval="3000">
+    <picture>
+      <source data-srcset="../images/crypto.webp" type="image/webp" media="(max-width: 768px)">
+      <source data-srcset="../images/crypto.webp" type="image/webp" media="(min-width: 769px)">
+      <source data-srcset="../images/crypto.png" type="image/png" media="(max-width: 768px)">
+      <source data-srcset="../images/crypto.png" type="image/png" media="(min-width: 769px)">
+      <img data-src="../images/crypto.png" class="enhanced-image d-block w-100" alt="Trade with various currencies">
+    </picture>
+    <div class="carousel-caption d-block">
+      <h1>Trade with various currencies</h1>
+      <p>Deposit and trade with any crypto exchange!</p>
+    </div>
+  </div>
+</div>
 
   
   <div class="carousel-item" data-bs-interval="3000">
