--- a/sign-in/index.html
+++ b/sign-in/index.html
@@ -183,7 +183,7 @@ background-size: cover; /* Ensures the image covers the entire background */
         <p class="lead">Multipy your profits in seconds.</p>
       </div>
       <div class="bg-dark shadow-sm mx-auto" style="width: 400px; height: 450px; border-radius: 21px 21px 10px 10px; position: relative;"><a href="earn.html">
-	  <img src="../images/reward.png" class="enhanced-image" class="rounded float-start" class="img-thumbnail" alt="Refer & Earn" style="width:400px; height:400px; margin-bottom:20px; "> 
+	  <img src="../images/reward.webp" class="enhanced-image" class="rounded float-start" class="img-thumbnail" alt="Refer & Earn" style="width:400px; height:400px; margin-bottom:20px; "> 
 	  </div>
     </div></a>
 	
