--- a/sign-in/index.html
+++ b/sign-in/index.html
@@ -54,7 +54,7 @@
       z-index: 1000;
     }
 .enhanced-image {
-background-image:url('../images/back.png');
+background-image:url('../images/back.webp');
 background-size: cover; /* Ensures the image covers the entire background */
     background-position: center; /* Centers the background image */
     background-repeat: no-repeat; /* Prevents the image from repeating */
