--- a/sign-in/earn.html
+++ b/sign-in/earn.html
@@ -298,58 +298,36 @@ height: 350px}
     </div>
   
 <div class="carousel-inner">
-  <!-- Slide 1 -->
   <div class="carousel-item active" data-bs-interval="3000">
     <picture>
-      <source data-srcset="../images/tr.webp" type="image/webp" media="(max-width: 768px)">
-      <source data-srcset="../images/tr.webp" type="image/webp" media="(min-width: 769px)">
-      <source data-srcset="../images/tr.png" type="image/png" media="(max-width: 768px)">
-      <source data-srcset="../images/tr.png" type="image/png" media="(min-width: 769px)">
-      <img data-src="../images/tr.png" class="enhanced-image d-block w-100" alt="Expand Your Horizon">
+      <source srcset="../images/tr.webp" media="(max-width: 768px)">
+      <source srcset="../images/tr.webp" media="(min-width: 769px)">
+      <img src="../images/tr.webp" class="enhanced-image d-block w-100" alt="Expand Your Horizon">
     </picture>
     <div class="carousel-caption d-block">
       <h1>Expand Your Horizon</h1>
       <p>Trading Hub is a place where crypto exchange flows around the world.</p>
     </div>
   </div>
-
-  <!-- Slide 2 -->
-  <div class="carousel-item" data-bs-interval="3000">
-    <picture>
-      <source data-srcset="../images/stock.webp" type="image/webp" media="(max-width: 768px)">
-      <source data-srcset="../images/stock.webp" type="image/webp" media="(min-width: 769px)">
-      <source data-srcset="../images/stock.jpg" type="image/jpeg" media="(max-width: 768px)">
-      <source data-srcset="../images/stock.jpg" type="image/jpeg" media="(min-width: 769px)">
-      <img data-src="../images/stock.jpg" class="enhanced-image d-block w-100" alt="Discover new things">
+  
+<div class="carousel-item" data-bs-interval="3000">
+ <picture>
+      <source srcset="../images/stock.webp" media="(max-width: 768px)">
+      <source srcset="../images/stock.webp" media="(min-width: 769px)">
+      <img src="../images/stock.webp" class="enhanced-image d-block w-100" alt="Discover new things">
     </picture>
-    <div class="carousel-caption d-block">
-      <h1>Discover New Markets</h1>
-      <p>Register your account and begin your journey with us!</p>
-    </div>
-  </div>
-
-  <!-- Slide 3 -->
-  <div class="carousel-item" data-bs-interval="3000">
-    <picture>
-      <source data-srcset="../images/crypto.webp" type="image/webp" media="(max-width: 768px)">
-      <source data-srcset="../images/crypto.webp" type="image/webp" media="(min-width: 769px)">
-      <source data-srcset="../images/crypto.png" type="image/png" media="(max-width: 768px)">
-      <source data-srcset="../images/crypto.png" type="image/png" media="(min-width: 769px)">
-      <img data-src="../images/crypto.png" class="enhanced-image d-block w-100" alt="Trade with various currencies">
-    </picture>
-    <div class="carousel-caption d-block">
-      <h1>Trade with various currencies</h1>
-      <p>Deposit and trade with any crypto exchange!</p>
-    </div>
+  <div class="carousel-caption d-block">
+    <h1>Discover New Markets</h1>
+    <p>Register your account and begin your journey with us!</p>
   </div>
 </div>
 
   
   <div class="carousel-item" data-bs-interval="3000">
     <picture>
-      <source srcset="../images/crypto.png" media="(max-width: 768px)">
-      <source srcset="../images/crypto.png" media="(min-width: 769px)">
-      <img src="../images/crypto.png" class="enhanced-image d-block w-100" alt="Trade with various currencies">
+      <source srcset="../images/crypto.webp" media="(max-width: 768px)">
+      <source srcset="../images/crypto.webp" media="(min-width: 769px)">
+      <img src="../images/crypto.webp" class="enhanced-image d-block w-100" alt="Trade with various currencies">
     </picture>
     <div class="carousel-caption d-block">
       <h1>Trade with various currencies</h1>
@@ -357,6 +335,8 @@ height: 350px}
     </div>
   </div>
 </div>
+
+
 
 
 
