--- a/sign-in/log.html
+++ b/sign-in/log.html
@@ -17,11 +17,84 @@
       .invalid-feedback {
         display: none;
       }
-	  
+	/* Full-screen preloader */
+#preloader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #0d0d0d;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+}
+
+/* Candle container */
+.candles {
+  display: flex;
+  gap: 10px;
+}
+
+/* Single candle style */
+.candle {
+  width: 6px;
+  height: 40px;
+  background: #0d6efd; /* Trading blue */
+  border-radius: 3px;
+  animation: candleMove 1s ease-in-out infinite;
+  opacity: 0.8;
+}
+
+/* Animate each candle slightly differently */
+.candle:nth-child(1) {
+  animation-delay: 0s;
+}
+.candle:nth-child(2) {
+  animation-delay: 0.2s;
+}
+.candle:nth-child(3) {
+  animation-delay: 0.4s;
+}
+.candle:nth-child(4) {
+  animation-delay: 0.6s;
+}
+.candle:nth-child(5) {
+  animation-delay: 0.8s;
+}
+
+/* Candle up-down and fade animation */
+@keyframes candleMove {
+  0% {
+    transform: scaleY(1);
+    opacity: 0.6;
+  }
+  50% {
+    transform: scaleY(1.8);
+    opacity: 1;
+  }
+  100% {
+    transform: scaleY(1);
+    opacity: 0.6;
+  }
+}
+  
     </style>
 	 <link href="heroes.css" rel="stylesheet">
   </head>
   <body class="text-center">
+	  <!-- Preloader -->
+<div id="preloader">
+  <div class="candles">
+    <div class="candle"></div>
+    <div class="candle"></div>
+    <div class="candle"></div>
+    <div class="candle"></div>
+    <div class="candle"></div>
+  </div>
+</div>
+
     <main class="form-signin w-100 m-auto">
       <div class="container col-xl-10 col-xxl-8 px-4 py-5">
         <div class="row align-items-center g-lg-5 py-5">
@@ -85,6 +158,24 @@
           </div>
         </div>
       </div>
+	    <script>
+  window.addEventListener('load', function () {
+    const preloader = document.getElementById('preloader');
+    preloader.style.transition = 'opacity 0.5s ease';
+
+    // Delay a bit to enjoy the animation
+    setTimeout(() => {
+      preloader.style.opacity = '0';
+      preloader.style.visibility = 'hidden';
+
+      // Hide completely after fade-out
+      setTimeout(() => {
+        preloader.style.display = 'none';
+      }, 500); // Matches the transition time
+    }, 800); // Initial delay
+  });
+</script>
+  </body>
 	 
     </main>
     <script src="form-validation.js"></script>
