--- a/sign-in/earn.html
+++ b/sign-in/earn.html
@@ -149,14 +149,13 @@ height: 350px}
     <link href="carousel.css" rel="stylesheet">
   </head>
   <body>
-	<!-- Preloader -->
-<div id="preloader">
+	<div id="preloader">
   <div class="candles">
-    <div class="candle"></div>
-    <div class="candle"></div>
-    <div class="candle"></div>
-    <div class="candle"></div>
-    <div class="candle"></div>
+    <div class="candle bullish"></div>
+    <div class="candle bearish"></div>
+    <div class="candle bullish"></div>
+    <div class="candle bearish"></div>
+    <div class="candle bullish"></div>
   </div>
 </div>
 
