--- a/sign-in/index.html
+++ b/sign-in/index.html
@@ -146,16 +146,16 @@ background-size: cover; /* Ensures the image covers the entire background */
     <link href="product.css" rel="stylesheet">
   </head>
   <body>
-    <!-- Preloader -->
-<div id="preloader">
+    <div id="preloader">
   <div class="candles">
-    <div class="candle"></div>
-    <div class="candle"></div>
-    <div class="candle"></div>
-    <div class="candle"></div>
-    <div class="candle"></div>
+    <div class="candle bullish"></div>
+    <div class="candle bearish"></div>
+    <div class="candle bullish"></div>
+    <div class="candle bearish"></div>
+    <div class="candle bullish"></div>
   </div>
 </div>
+
 
 <header class="site-header sticky-top py-1">
   <nav class="container d-flex flex-column flex-md-row justify-content-between">
